:bug: fix(form-ext.scss): Fix bug with non-vertically aligned toggle for different zoom levels #112

--- a/src/components/form-ext.scss
+++ b/src/components/form-ext.scss
@@ -186,6 +186,7 @@ $generate-utility: should-generate-classes($FORMS-EXT);
                 transform: translateY(-50%);
                 transition: left var(--animation-duration) ease;
                 text-align: left;
+                top: 50%;
             }
         }
 
